--- a/ios/ThoughtloomAI/SplashScreen.storyboard
+++ b/ios/ThoughtloomAI/SplashScreen.storyboard
@@ -18,6 +18,10 @@
                         <subviews>
                             <imageView id="EXPO-SplashScreen" userLabel="SplashScreenLogo" image="SplashScreenLogo" contentMode="scaleAspectFit" clipsSubviews="true" userInteractionEnabled="false" translatesAutoresizingMaskIntoConstraints="false">
                                 <rect key="frame" x="0" y="0" width="414" height="736"/>
+                                <image name="SplashScreenLogo" width="414" height="736"/>
+                                <variation key="dark">
+                                    <image name="SplashScreenLogoDark" width="414" height="736"/>
+                                </variation>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Rmq-lb-GrQ"/>
@@ -37,8 +41,12 @@
     </scenes>
     <resources>
         <image name="SplashScreenLogo" width="414" height="736"/>
+        <image name="SplashScreenLogoDark" width="414" height="736"/>
         <namedColor name="SplashScreenBackground">
             <color alpha="1.000" blue="0.968627450980392" green="0.949019607843137" red="0.949019607843137" customColorSpace="sRGB" colorSpace="custom"/>
+            <variation key="dark">
+                <color alpha="1.000" blue="0.000" green="0.000" red="0.000" customColorSpace="sRGB" colorSpace="custom"/>
+            </variation>
         </namedColor>
     </resources>
 </document>
